--- a/MillzysMod.Installer/MillzysMod.Installer.csproj
+++ b/MillzysMod.Installer/MillzysMod.Installer.csproj
@@ -27,4 +27,9 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Views\StartWindow.axaml.cs">
+      <DependentUpon>StartWindow.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
