--- a/MillzysMod.Installer/MillzysMod.Installer.csproj
+++ b/MillzysMod.Installer/MillzysMod.Installer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -26,6 +26,9 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.18" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.18" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
+  </ItemGroup>
+  <ItemGroup>
+	  <ProjectReference Include="../QuestPatcher.Core/QuestPatcher.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Views\StartWindow.axaml.cs">
